k8s/namespaces/development/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: development
  labels:
    app.kubernetes.io/name: code-server
spec:
  selector:
    app.kubernetes.io/name: code-server
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: code-server
  type: ClusterIP
