k8s/namespaces/development/code-server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: development
  labels:
    app.kubernetes.io/name: code-server
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - "vscode.hosted.fail"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: internal-whitelist
      backendRefs:
        - name: code-server
          port: 8080
