k8s/namespaces/development/code-server/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: code-server-https
  namespace: development
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vscode.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: code-server
          port: 8080
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: code-server-http
  namespace: development
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vscode.oglesby.io`)
      kind: Rule
      services:
        - name: code-server
          port: 8080
      middlewares:
      - name: internal-whitelist
        namespace: traefik
      - name: redirect-https
        namespace: traefik
